<resources>
    <string name="app_name">Find My Doctor</string>

    <string name="my_profile">My Profile</string>

    <string name="book_appointment">Book Appointment</string>
    <string name="my_appointment">My Appointment</string>
    <string name="doctor_department">Department</string>
    <string name="doctor_gender">Doctor Gender</string>

    <string name="message">Welcome</string>
    <string name="d_info">Doctor\'s info</string>
    <string name="d_appointment">My appointments</string>
    <string name="d_name">Doctor\'s name</string>

    <string name="find_doctor">Find Doctor</string>

    <string name="choose_doctor">Available Doctors</string>
    <string name="book_button">Show Available Time</string>
    <string name="patient_login_button">Patient Login</string>
    <string name="doctor_login_button">Doctor Login</string>
    <string name="welcome_login">Login</string>
    <string name="patient_login_title">Login as a patient</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="doctor_login_title">Login as a doctor</string>
    <string name="login_button">LOGIN</string>
    <string name="myAppointments">My appointments</string>
    <string name="prevAppointments">Previous Appointments</string>
    <string name="upcomingAppointments">Upcoming Appointments</string>
    <string name="choose_time">Choose Appointment Time</string>
    <string name="schedule">Schedule for: </string>
    <string name="home">Home</string>


    <string-array name="departments">
        <item>Cardiology</item>
        <item>Gynecology</item>
        <item>Ophthalmology</item>
        <item>Gastroenterology</item>
        <item>Ear, nose and throat</item>
    </string-array>

    <string-array name="doctor_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="d_AllAppointment">List of upcoming Appointment</string>
    <string name="booking_status">Booking Status</string>
    <string name="p_info">Patient\'s info</string>
    <string name="previous_d">Previous Doctor</string>
    <string name="last_message">Booking Successful!</string>
    <string name="booking_time">time</string>
    <string name="doctor_schedule">My Schedule</string>
    <string name="choose_date">Choose Date</string>
    <string name="showTime">Show Time</string>
    <string name="title_activity_display_patient">DisplayPatientActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>