<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DoctorActivity">

    <Button
        android:id="@+id/d_schedule"
        android:layout_width="205dp"
        android:layout_height="63dp"
        android:layout_marginTop="68dp"
        android:onClick="openSchedule"
        android:text="@string/doctor_schedule"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Upcoming_Appointment"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/d_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Upcoming_Appointment"
        android:layout_width="205dp"
        android:layout_height="63dp"
        android:layout_marginTop="64dp"
        android:onClick="openUpcomingAppointment"
        android:text="@string/d_appointment"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_info"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/d_info"
        android:layout_width="247dp"
        android:layout_height="101dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/d_info"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

</androidx.constraintlayout.widget.ConstraintLayout>